Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,8 @@ steps:
   displayName: "Build the sln"
   inputs:
     command: 'build'
-    projects: '$(solution)'
+    projects: |
+      $(project)
+      $(solution)
     arguments: '--configuration $(buildConfiguration)'
 
