--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,11 @@ variables:
 
 steps:
 - task: DotNetCoreCLI@2
-  name: "Tests"
-  displayName: "Run Tests"
+  name: "build"
+  displayName: "build the sln"
   inputs:
-    command: 'test'
-    projects: '$(solution)'
+    command: 'build'
+    projects: |
+      $(project)
+      $(solution)
     arguments: '--configuration $(buildConfiguration)'
-
